<resources>
    <string name="app_name">Icebreaker-class</string>
    <string name="button">Post to Firebase</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="question_text">Question Text</string>
    <string name="get_new_random_question">Get new random question</string>
</resources>
